Replace phpBB Group with phpBB Limited
EXTTOOLS-654

- "phpBB Group" replaced with "phpBB Limited"

--- a/style/overall_footer.html
+++ b/style/overall_footer.html
@@ -8,7 +8,7 @@
 
 	<div id="page-footer">
 		<a href="https://www.phpbb.com/customise/db/official_tool/phpbb3_quickinstall/">phpBB QuickInstall</a> {QI_VERSION} for phpBB 3.0 and 3.1 &copy; <a href="http://www.phpbb.com/">phpBB Group</a><br />
-		Powered by phpBB&reg; Forum Software &copy; <a href="http://www.phpbb.com/">phpBB Group</a>
+		Powered by phpBB&reg; Forum Software &copy; <a href="http://www.phpbb.com/">phpBB Limited</a>
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 	</div>
 </div>
